# palproxvoice

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README.pt-BR.md  docker-compose.palworld-test.yml  docker-compose.palworld.example.yml  docker-compose.v2.yml  docker-compose.yml  local.sh  restore.sh
.claude/: settings.json
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
bridge/: go.mod  main.go
companion/: BUILD.md  app.go  config.json.example  ducking_windows.go  go.mod  go.sum  hotkey_windows.go  main.go  mic_capture_windows.go  palworld_watch_windows.go  serverdetect.go  serverdetect_etw_windows.go  serverdetect_test.go  taskbar_other.go  taskbar_windows.go  wails.json
companion/cmd/watcher/: main.go
deploy/v2-experimental/: README.md
deploy/v2-experimental/linux/: Dockerfile  docker-compose.yml  entrypoint.sh
deploy/v2-experimental/windows/: install.ps1
docs/: ANTI-SPOOF-DEPLOY.md  ARCHITECTURE.md  ROADMAP.md
installer/: Instalar.bat  install.ps1  palproxvoice.iss
linux-native/: README.md  docker-compose.yml
mod/: receiver.ps1  receiver.py
mod-live/: CMakeLists.txt  README.md  dllmain.cpp  xmake.lua
mod-server/: README.md
mod-server/PalProxVoiceServer/scripts/: main.lua
mod/PalProxVoice/scripts/: main.lua  probe_desc.lua  probe_guild.lua  probe_hook.lua  probe_id.lua  probe_server.lua
server/: Dockerfile  README.md  antispoof.go  antispoof_v2.go  go.mod  go.sum  main.go
server/web/: index.html
v3-linux-native/: README.md  probe.js
